--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <p>Este peojeto tem o intuito de estudo do HTML5</p>
         <img src="https://img.elo7.com.br/product/zoom/15C7247/mandala-rosa-de-saron-enfeite.jpg" alt="Ciclico"/>
     </section>
+    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque eaque dolorem, eveniet ab placeat labore eius sint optio nemo facilis molestiae natus nobis temporibus debitis alias corrupti ipsa facere officiis?</p>
         <footer> <!--Roda pé-->
             <p>EDS-Developing &copy;2023</p> <!--(&COPY) ATALHO PARA INSERIR SIMBOLO DE DIREITOS RESERVADOS-->
 
